# ttyd-slackbot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_CONTEXT.md  README.md  prompts.md  pyproject.toml  render.yaml
datasets/ttyd/: help_response.md
datasets/ttyd/payments/: schema.yaml
datasets/ttyd/sessions/: schema.yaml
datasets/ttyd/subscriptions/: schema.yaml
datasets/ttyd/users/: schema.yaml
scripts/: generate_help_response.py  verify_pandasai_load.py
src/ttyd_slackbot/: main.py
src/ttyd_slackbot/engine/: __init__.py  runner.py
src/ttyd_slackbot/intake/: guardrails.py  help_intent.py  help_response.py  memory.py  schema_loader.py  slack_app.py
src/ttyd_slackbot/output/: __init__.py  format_table.py  pii_check.py  prepare.py
src/ttyd_slackbot/semantic_layer/: __init__.py  refresh.py
tests/: test_engine.py  test_guardrails.py  test_help_intent.py  test_help_response.py  test_intake.py  test_memory.py  test_output.py  test_schema_loader.py  test_semantic_layer_refresh.py
ttyd_slackbot/intake/: __init__.py  slack_app.py
